Updated styles js and markup

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,11 @@
 
   <div id="container">
 
-    <div id="background" class="parallax-sprite"></div>
+    <img src="img/bg.jpg" id="background" class="parallax-sprite"></div>
+
+    <img src="img/Drone.png" id="drone" class="parallax-sprite"></div>
+
+    <img src="img/globemaster.png" id="globemaster" class="parallax-sprite"></div>
 
     <div id="middle-ground" class="parallax-sprite">
       <div class="page page-one">
@@ -43,6 +47,8 @@
         <p>blah</p>
       </div>
     </div>
+
+    <img src="img/globemaster.png" id="globemaster" class="parallax-sprite"></div>
 
   </div>
 
